--- a/WalletWasabi.Fluent/Styles/DataGrid.axaml
+++ b/WalletWasabi.Fluent/Styles/DataGrid.axaml
@@ -1,5 +1,42 @@
 <Styles xmlns="https://github.com/avaloniaui"
-        xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml">
+        xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+        xmlns:g="clr-namespace:TemplatedDataGrid;assembly=TemplatedDataGrid"
+        xmlns:p="clr-namespace:TemplatedDataGrid.Primitives;assembly=TemplatedDataGrid">
+
+  <Style Selector="g|DataGrid">
+    <Setter Property="GridLinesVisibility" Value="Horizontal"/>
+    <Setter Property="IsReadOnly" Value="True"/>
+    <Setter Property="CanUserResizeColumns" Value="True"/>
+  </Style>
+  <Style Selector="g|DataGridColumnHeader">
+    <Setter Property="Padding" Value="6"/>
+  </Style>
+
+  <Style Selector="g|DataGridRow:pointerover /template/ Rectangle#BackgroundRectangle">
+    <Setter Property="Fill" Value="{DynamicResource DataGridRowSelectedBackgroundColor}" />
+  </Style>
+  <Style Selector="g|DataGridRow:selected /template/ Border#PART_SelectionIndicator">
+    <Setter Property="BorderBrush" Value="{DynamicResource DataGridRowIndicatorBrush}" />
+  </Style>
+  <Style Selector="g|DataGridRow /template/ Border#PART_SelectionIndicator">
+    <Setter Property="BorderBrush" Value="Transparent" />
+  </Style>
+
+  <Style Selector="g|DataGridCell">
+    <Setter Property="Padding" Value="0"/>
+  </Style>
+
+  <Style Selector="g|DataGridColumnHeader">
+    <Setter Property="FontSize" Value="{StaticResource FontSizeH7}" />
+    <Setter Property="FontWeight" Value="Bold" />
+    <Setter Property="Padding" Value="12 10 10 10" />
+  </Style>
+
+
+
+
+
+
 
   <Style Selector="DataGrid">
     <Setter Property="GridLinesVisibility" Value="Horizontal"/>
