--- a/WalletWasabi.Fluent/Styles/Themes/BaseDark.axaml
+++ b/WalletWasabi.Fluent/Styles/Themes/BaseDark.axaml
@@ -80,6 +80,7 @@
 
   <!-- Needs to be here because of dependency reason -->
   <StyleInclude Source="avares://Avalonia.Controls.DataGrid/Themes/Fluent.xaml" />
+  <StyleInclude Source="avares://TemplatedDataGrid/Themes/Fluent.axaml"/>
 
   <StyleInclude Source="avares://Avalonia.Xaml.Interactions/Draggable/Styles.axaml" />
   <StyleInclude Source="avares://WalletWasabi.Fluent/Styles/Themes/Base.axaml" />
