--- a/WalletWasabi.Fluent/Styles/Themes/BaseLight.axaml
+++ b/WalletWasabi.Fluent/Styles/Themes/BaseLight.axaml
@@ -76,6 +76,7 @@
 
   </Styles.Resources>
   <StyleInclude Source="avares://Avalonia.Themes.Fluent/FluentLight.xaml" />
+  <StyleInclude Source="avares://TemplatedDataGrid/Themes/Fluent.axaml"/>
 
   <!-- Needs to be here because of dependency reason -->
   <StyleInclude Source="avares://Avalonia.Controls.DataGrid/Themes/Fluent.xaml" />
