--- a/WalletWasabi.Fluent/Styles/Styles.axaml
+++ b/WalletWasabi.Fluent/Styles/Styles.axaml
@@ -22,6 +22,7 @@
   <StyleInclude Source="avares://WalletWasabi.Fluent/Controls/AnimatedButton.axaml" />
   <StyleInclude Source="avares://WalletWasabi.Fluent/Controls/CurrencyEntryBox.axaml" />
   <StyleInclude Source="avares://WalletWasabi.Fluent/Styles/DataGrid.axaml" />
+  <StyleInclude Source="avares://WalletWasabi.Fluent/Styles/TemplatedDataGrid.axaml" />
   <StyleInclude Source="avares://WalletWasabi.Fluent/Styles/RadioButton.axaml" />
   <StyleInclude Source="avares://WalletWasabi.Fluent/Styles/SettingsLayout.axaml" />
   <StyleInclude Source="avares://WalletWasabi.Fluent/Styles/Slider.axaml" />
