--- a/WalletWasabi.Fluent/Styles/TemplatedDataGrid.axaml
+++ b/WalletWasabi.Fluent/Styles/TemplatedDataGrid.axaml
@@ -1,7 +1,9 @@
 <Styles xmlns="https://github.com/avaloniaui"
-        xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml">
+        xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+        xmlns:g="clr-namespace:TemplatedDataGrid;assembly=TemplatedDataGrid"
+        xmlns:p="clr-namespace:TemplatedDataGrid.Primitives;assembly=TemplatedDataGrid">
 
-  <Style Selector="DataGrid">
+  <Style Selector="g|DataGrid">
     <Setter Property="GridLinesVisibility" Value="Horizontal"/>
     <Setter Property="IsReadOnly" Value="True"/>
     <Setter Property="CanUserResizeColumns" Value="True"/>
@@ -23,20 +25,20 @@
             <Rectangle Name="BackgroundRectangle"
                        Grid.RowSpan="2"
                        Grid.ColumnSpan="2" />
-            <Rectangle x:Name="InvalidVisualElement"
+            <!--<Rectangle x:Name="InvalidVisualElement"
                        Grid.ColumnSpan="2"
-                       Fill="{DynamicResource DataGridRowInvalidBrush}" />
+                       Fill="{DynamicResource DataGridRowInvalidBrush}" />-->
 
-            <DataGridRowHeader Name="PART_RowHeader"
+            <!--<DataGridRowHeader Name="PART_RowHeader"
                                Grid.RowSpan="3"
-                               DataGridFrozenGrid.IsFrozen="True" />
+                               DataGridFrozenGrid.IsFrozen="True" />-->
             <DataGridCellsPresenter Name="PART_CellsPresenter"
                                     Grid.Column="1"
                                     DataGridFrozenGrid.IsFrozen="True" />
-            <DataGridDetailsPresenter Name="PART_DetailsPresenter"
+            <!--<DataGridDetailsPresenter Name="PART_DetailsPresenter"
                                       Grid.Row="1"
                                       Grid.Column="1"
-                                      Background="{DynamicResource DataGridDetailsPresenterBackgroundBrush}" />
+                                      Background="{DynamicResource DataGridDetailsPresenterBackgroundBrush}" />-->
             <Rectangle Name="PART_BottomGridLine"
                        Grid.Row="2"
                        Grid.Column="1"
@@ -49,21 +51,21 @@
     </Setter>
   </Style>
 
-  <Style Selector="DataGridRow:pointerover /template/ Rectangle#BackgroundRectangle">
+  <Style Selector="g|DataGridRow:pointerover /template/ Rectangle#BackgroundRectangle">
     <Setter Property="Fill" Value="{DynamicResource DataGridRowSelectedBackgroundColor}" />
   </Style>
-  <Style Selector="DataGridRow:selected /template/ Border#PART_SelectionIndicator">
+  <Style Selector="g|DataGridRow:selected /template/ Border#PART_SelectionIndicator">
     <Setter Property="BorderBrush" Value="{DynamicResource DataGridRowIndicatorBrush}" />
   </Style>
-  <Style Selector="DataGridRow /template/ Border#PART_SelectionIndicator">
+  <Style Selector="g|DataGridRow /template/ Border#PART_SelectionIndicator">
     <Setter Property="BorderBrush" Value="Transparent" />
   </Style>
 
-  <Style Selector="DataGridCell">
+  <Style Selector="g|DataGridCell">
     <Setter Property="Padding" Value="0"/>
   </Style>
 
-  <Style Selector="DataGridColumnHeader">
+  <Style Selector="g|DataGridColumnHeader">
     <Setter Property="FontSize" Value="{StaticResource FontSizeH7}" />
     <Setter Property="FontWeight" Value="Bold" />
     <Setter Property="Padding" Value="12 10 10 10" />
