--- a/WalletWasabi.Fluent/Styles/TemplatedDataGrid.axaml
+++ b/WalletWasabi.Fluent/Styles/TemplatedDataGrid.axaml
@@ -3,6 +3,18 @@
         xmlns:g="clr-namespace:TemplatedDataGrid;assembly=TemplatedDataGrid"
         xmlns:p="clr-namespace:TemplatedDataGrid.Primitives;assembly=TemplatedDataGrid">
 
+  <!--<Style Selector="p|DataGridRowsPresenter">
+    <Setter Property="Template">
+      <ControlTemplate>
+        <ScrollViewer HorizontalScrollBarVisibility="Auto" VerticalScrollBarVisibility="Auto">
+          <ItemsRepeater Name="PART_ItemsRepeater"
+                         Items="{TemplateBinding Items}"
+                         ItemTemplate="{TemplateBinding ItemTemplate}"/>
+        </ScrollViewer>
+      </ControlTemplate>
+    </Setter>
+  </Style>-->
+
   <Style Selector="g|DataGrid">
     <Setter Property="GridLinesVisibility" Value="Horizontal"/>
     <Setter Property="IsReadOnly" Value="True"/>
