--- a/WalletWasabi.Fluent/Views/Wallets/Home/History/HistoryTable.axaml
+++ b/WalletWasabi.Fluent/Views/Wallets/Home/History/HistoryTable.axaml
@@ -5,19 +5,17 @@
              xmlns:i="clr-namespace:Avalonia.Xaml.Interactivity;assembly=Avalonia.Xaml.Interactivity"
              xmlns:ir="clr-namespace:Avalonia.Xaml.Interactions.Responsive;assembly=Avalonia.Xaml.Interactions"
              xmlns:c="using:WalletWasabi.Fluent.Controls"
-             xmlns:g="clr-namespace:TemplatedDataGrid;assembly=TemplatedDataGrid"
-             xmlns:p="clr-namespace:TemplatedDataGrid.Primitives;assembly=TemplatedDataGrid"
              xmlns:history="clr-namespace:WalletWasabi.Fluent.ViewModels.Wallets.Home.History"
              xmlns:converters="clr-namespace:WalletWasabi.Fluent.Converters"
              mc:Ignorable="d" d:DesignWidth="800" d:DesignHeight="450"
              x:DataType="history:HistoryViewModel"
              x:CompileBindings="True"
              x:Class="WalletWasabi.Fluent.Views.Wallets.Home.History.HistoryTable">
-  <g:DataGrid Items="{Binding CollectionView}"
-              SelectedItem="{Binding SelectedItem}"
-              CanUserResizeColumns="False"
-              DockPanel.Dock="Bottom">
-    <g:DataGrid.Styles>
+  <TemplatedDataGrid Items="{Binding CollectionView}"
+                     SelectedItem="{Binding SelectedItem}"
+                     CanUserResizeColumns="False"
+                     DockPanel.Dock="Bottom">
+    <TemplatedDataGrid.Styles>
       <Style Selector="PathIcon">
         <Setter Property="Height" Value="13" />
         <Setter Property="VerticalAlignment" Value="Center" />
@@ -31,7 +29,7 @@
         <Setter Property="Spacing" Value="10" />
         <Setter Property="Margin" Value="10 0" />
       </Style>
-      <Style Selector="g|DataGridRow">
+      <Style Selector="TemplatedDataGridRow">
         <Setter Property="Focusable" Value="False" />
         <Setter Property="Height" Value="37.5" />
         <Setter Property="Template">
@@ -55,9 +53,9 @@
                 <!--<DataGridRowHeader Name="PART_RowHeader"
                                    Grid.RowSpan="3"
                                    DataGridFrozenGrid.IsFrozen="True" />-->
-                <p:DataGridCellsPresenter Name="PART_CellsPresenter"
-                                        Grid.Column="1"
-                                        DataGridFrozenGrid.IsFrozen="True" />
+                <TemplatedDataGridCellsPresenter Name="PART_CellsPresenter"
+                                                 Grid.Column="1"
+                                                 DataGridFrozenGrid.IsFrozen="True" />
                 <!--<DataGridDetailsPresenter Name="PART_DetailsPresenter"
                                           Grid.Row="1"
                                           Grid.Column="1"
@@ -73,7 +71,7 @@
           </ControlTemplate>
         </Setter>
       </Style>
-      <Style Selector="g|DataGridRow /template/ Rectangle#BackgroundRectangle.selectAnimation">
+      <Style Selector="TemplatedDataGridRow /template/ Rectangle#BackgroundRectangle.selectAnimation">
         <Setter Property="Fill" Value="{DynamicResource SystemAccentColor}"/>
         <Setter Property="Opacity" Value="0" />
         <Style.Animations>
@@ -135,15 +133,15 @@
       <Style Selector="PathIcon.hidden">
         <Setter Property="IsVisible" Value="False"/>
       </Style>
-    </g:DataGrid.Styles>
+    </TemplatedDataGrid.Styles>
 
-    <g:DataGrid.Columns>
+    <TemplatedDataGrid.Columns>
 
       <!-- Date -->
-      <g:DataGridTemplateColumn Header="Date / Time"
-                              Width="Auto"
-                              SortMemberPath="OrderIndex">
-        <g:DataGridTemplateColumn.CellTemplate>
+      <TemplatedDataGridTemplateColumn Header="Date / Time"
+                                       Width="Auto"
+                                       SortMemberPath="OrderIndex">
+        <TemplatedDataGridTemplateColumn.CellTemplate>
           <DataTemplate>
             <c:PrivacyContentControl x:DataType="history:HistoryItemViewModel"
                                      Content="{Binding Date, StringFormat='{}{0:MM/dd/yyyy HH:mm}'}"
@@ -152,14 +150,14 @@
                                      Margin="10 0"
                                      NumberOfPrivacyChars="15" />
           </DataTemplate>
-        </g:DataGridTemplateColumn.CellTemplate>
-      </g:DataGridTemplateColumn>
+        </TemplatedDataGridTemplateColumn.CellTemplate>
+      </TemplatedDataGridTemplateColumn>
 
       <!-- Type -->
-      <g:DataGridTemplateColumn Header="Type"
-                                Width="Auto"
-                                SortMemberPath="IsCoinJoin">
-        <g:DataGridTemplateColumn.CellTemplate>
+      <TemplatedDataGridTemplateColumn Header="Type"
+                                       Width="Auto"
+                                       SortMemberPath="IsCoinJoin">
+        <TemplatedDataGridTemplateColumn.CellTemplate>
           <DataTemplate>
             <c:PrivacyContentControl PrivacyReplacementMode="Icon">
               <c:PrivacyContentControl.Styles>
@@ -176,15 +174,15 @@
               </Panel>
             </c:PrivacyContentControl>
           </DataTemplate>
-        </g:DataGridTemplateColumn.CellTemplate>
-      </g:DataGridTemplateColumn>
+        </TemplatedDataGridTemplateColumn.CellTemplate>
+      </TemplatedDataGridTemplateColumn>
 
       <!-- Labels -->
-      <g:DataGridTemplateColumn Header="Labels"
-                                Width="Auto"
-                                CanUserSort="False"
-                                SortMemberPath="Label">
-        <g:DataGridTemplateColumn.CellTemplate>
+      <TemplatedDataGridTemplateColumn Header="Labels"
+                                       Width="Auto"
+                                       CanUserSort="False"
+                                       SortMemberPath="Label">
+        <TemplatedDataGridTemplateColumn.CellTemplate>
           <DataTemplate>
             <c:PrivacyContentControl PrivacyReplacementMode="Text" NumberOfPrivacyChars="15" Classes="monoSpacedPrivacyReplacement">
               <DockPanel LastChildFill="False" x:DataType="history:HistoryItemViewModel">
@@ -219,16 +217,16 @@
               </DockPanel>
             </c:PrivacyContentControl>
           </DataTemplate>
-        </g:DataGridTemplateColumn.CellTemplate>
-      </g:DataGridTemplateColumn>
+        </TemplatedDataGridTemplateColumn.CellTemplate>
+      </TemplatedDataGridTemplateColumn>
 
       <!-- Incoming -->
-      <g:DataGridTemplateColumn Header="Incoming (BTC)"
-                                Width="*"
-                                MinWidth="160"
-                                MaxWidth="210"
-                                SortMemberPath="IncomingAmount">
-        <g:DataGridTemplateColumn.CellTemplate>
+      <TemplatedDataGridTemplateColumn Header="Incoming (BTC)"
+                                       Width="*"
+                                       MinWidth="160"
+                                       MaxWidth="210"
+                                       SortMemberPath="IncomingAmount">
+        <TemplatedDataGridTemplateColumn.CellTemplate>
           <DataTemplate>
             <Panel Name="Panel" HorizontalAlignment="Stretch">
               <StackPanel x:DataType="history:HistoryItemViewModel"
@@ -248,16 +246,16 @@
               </StackPanel>
             </Panel>
           </DataTemplate>
-        </g:DataGridTemplateColumn.CellTemplate>
-      </g:DataGridTemplateColumn>
+        </TemplatedDataGridTemplateColumn.CellTemplate>
+      </TemplatedDataGridTemplateColumn>
 
       <!-- Outgoing -->
-      <g:DataGridTemplateColumn Header="Outgoing (BTC)"
-                                Width="*"
-                                MinWidth="160"
-                                MaxWidth="210"
-                                SortMemberPath="OutgoingAmount">
-        <g:DataGridTemplateColumn.CellTemplate>
+      <TemplatedDataGridTemplateColumn Header="Outgoing (BTC)"
+                                       Width="*"
+                                       MinWidth="160"
+                                       MaxWidth="210"
+                                       SortMemberPath="OutgoingAmount">
+        <TemplatedDataGridTemplateColumn.CellTemplate>
           <DataTemplate>
             <Panel Name="Panel" HorizontalAlignment="Stretch">
               <StackPanel x:DataType="history:HistoryItemViewModel"
@@ -277,14 +275,14 @@
               </StackPanel>
             </Panel>
           </DataTemplate>
-        </g:DataGridTemplateColumn.CellTemplate>
-      </g:DataGridTemplateColumn>
+        </TemplatedDataGridTemplateColumn.CellTemplate>
+      </TemplatedDataGridTemplateColumn>
 
       <!-- Balance -->
-      <g:DataGridTemplateColumn Header="Balance (BTC)"
+      <TemplatedDataGridTemplateColumn Header="Balance (BTC)"
                                 Width="Auto"
                                 SortMemberPath="Balance">
-        <g:DataGridTemplateColumn.CellTemplate>
+        <TemplatedDataGridTemplateColumn.CellTemplate>
           <DataTemplate>
             <c:PrivacyContentControl x:DataType="history:HistoryItemViewModel"
                                      Content="{Binding Balance, Converter={x:Static converters:MoneyConverters.ToFormattedString}}"
@@ -294,16 +292,16 @@
                                      HorizontalAlignment="Right"
                                      Margin="10 0" />
           </DataTemplate>
-        </g:DataGridTemplateColumn.CellTemplate>
-      </g:DataGridTemplateColumn>
+        </TemplatedDataGridTemplateColumn.CellTemplate>
+      </TemplatedDataGridTemplateColumn>
 
       <!-- Status -->
-      <g:DataGridTemplateColumn Header="Status"
-                                Width="*"
-                                MinWidth="120"
-                                MaxWidth="120"
-                                SortMemberPath="IsConfirmed">
-        <g:DataGridTemplateColumn.CellTemplate>
+      <TemplatedDataGridTemplateColumn Header="Status"
+                                       Width="*"
+                                       MinWidth="120"
+                                       MaxWidth="120"
+                                       SortMemberPath="IsConfirmed">
+        <TemplatedDataGridTemplateColumn.CellTemplate>
           <DataTemplate>
             <Panel x:DataType="history:HistoryItemViewModel">
               <!-- Confirmed -->
@@ -337,22 +335,22 @@
               </StackPanel>
             </Panel>
           </DataTemplate>
-        </g:DataGridTemplateColumn.CellTemplate>
-      </g:DataGridTemplateColumn>
+        </TemplatedDataGridTemplateColumn.CellTemplate>
+      </TemplatedDataGridTemplateColumn>
 
       <!-- Details -->
-      <g:DataGridTemplateColumn Width="Auto"
-                                CanUserSort="False">
-        <g:DataGridTemplateColumn.CellTemplate>
+      <TemplatedDataGridTemplateColumn Width="Auto"
+                                       CanUserSort="False">
+        <TemplatedDataGridTemplateColumn.CellTemplate>
           <DataTemplate>
             <Button x:DataType="history:HistoryItemViewModel" Classes="plain" ToolTip.Tip="Show Details"
                     Command="{Binding ShowDetailsCommand}">
               <PathIcon Data="{StaticResource details_regular}" Height="15" Opacity="0.6" />
             </Button>
           </DataTemplate>
-        </g:DataGridTemplateColumn.CellTemplate>
-      </g:DataGridTemplateColumn>
+        </TemplatedDataGridTemplateColumn.CellTemplate>
+      </TemplatedDataGridTemplateColumn>
 
-    </g:DataGrid.Columns>
-  </g:DataGrid>
+    </TemplatedDataGrid.Columns>
+  </TemplatedDataGrid>
 </UserControl>
