--- a/WalletWasabi.Fluent/Views/Wallets/Send/PrivacyControlView.axaml
+++ b/WalletWasabi.Fluent/Views/Wallets/Send/PrivacyControlView.axaml
@@ -3,8 +3,6 @@
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
              xmlns:c="using:WalletWasabi.Fluent.Controls"
-             xmlns:g="clr-namespace:TemplatedDataGrid;assembly=TemplatedDataGrid"
-             xmlns:p="clr-namespace:TemplatedDataGrid.Primitives;assembly=TemplatedDataGrid"
              xmlns:vm="using:WalletWasabi.Fluent.ViewModels.Wallets.Send"
              mc:Ignorable="d" d:DesignWidth="800" d:DesignHeight="450"
              x:DataType="vm:PrivacyControlViewModel"
@@ -52,37 +50,37 @@
       </StackPanel>
 
       <!-- List -->
-      <DataGrid AutoGenerateColumns="False"
-                Items="{Binding Pockets}">
-        <DataGrid.Resources>
+      <TemplatedDataGrid AutoGenerateColumns="False"
+                         Items="{Binding Pockets}">
+        <TemplatedDataGrid.Resources>
           <SolidColorBrush x:Key="DataGridRowIndicatorBrush" Color="Transparent" />
           <SolidColorBrush x:Key="DataGridRowSelectedBackgroundColor" Color="Transparent" />
           <StaticResource x:Key="DataGridRowSelectedUnfocusedBackgroundColor"
                           ResourceKey="DataGridRowSelectedBackgroundColor" />
-        </DataGrid.Resources>
-        <DataGrid.Columns>
-          <DataGridTemplateColumn CanUserSort="False" CanUserResize="False" CanUserReorder="False">
+        </TemplatedDataGrid.Resources>
+        <TemplatedDataGrid.Columns>
+          <TemplatedDataGridTemplateColumn CanUserSort="False" CanUserResize="False" CanUserReorder="False">
             <DataGridTemplateColumn.CellTemplate>
               <DataTemplate x:DataType="vm:PocketViewModel">
                 <CheckBox HorizontalAlignment="Center" IsChecked="{Binding IsSelected}" Focusable="False" />
               </DataTemplate>
             </DataGridTemplateColumn.CellTemplate>
-          </DataGridTemplateColumn>
+          </TemplatedDataGridTemplateColumn>
 
-          <DataGridTextColumn x:DataType="vm:PocketViewModel"
-                              CanUserSort="False"
-                              Header="Total (BTC)"
-                              Binding="{Binding TotalBtc}" />
+          <TemplatedDataGridTextColumn x:DataType="vm:PocketViewModel"
+                                       CanUserSort="False"
+                                       Header="Total (BTC)"
+                                       Binding="{Binding TotalBtc}" />
 
-          <DataGridTemplateColumn CanUserSort="False" Width="*" Header="Labels">
+          <TemplatedDataGridTemplateColumn CanUserSort="False" Width="*" Header="Labels">
             <DataGridTemplateColumn.CellTemplate>
               <DataTemplate x:DataType="vm:PocketViewModel">
                 <c:TagsBox Items="{Binding Labels}" IsReadOnly="True" HorizontalAlignment="Left" />
               </DataTemplate>
             </DataGridTemplateColumn.CellTemplate>
-          </DataGridTemplateColumn>
-        </DataGrid.Columns>
-      </DataGrid>
+          </TemplatedDataGridTemplateColumn>
+        </TemplatedDataGrid.Columns>
+      </TemplatedDataGrid>
     </DockPanel>
   </c:ContentArea>
 </UserControl>
