--- a/WalletWasabi.Fluent/Styles/TemplatedDataGrid.axaml
+++ b/WalletWasabi.Fluent/Styles/TemplatedDataGrid.axaml
@@ -23,20 +23,20 @@
             <Rectangle Name="BackgroundRectangle"
                        Grid.RowSpan="2"
                        Grid.ColumnSpan="2" />
-            <!--<Rectangle x:Name="InvalidVisualElement"
+            <Rectangle x:Name="InvalidVisualElement"
                        Grid.ColumnSpan="2"
-                       Fill="{DynamicResource DataGridRowInvalidBrush}" />-->
+                       Fill="{DynamicResource DataGridRowInvalidBrush}" />
 
-            <!--<DataGridRowHeader Name="PART_RowHeader"
+            <TemplatedDataGridRowHeader Name="PART_RowHeader"
                                Grid.RowSpan="3"
-                               DataGridFrozenGrid.IsFrozen="True" />-->
+                               DataGridFrozenGrid.IsFrozen="True" />
             <TemplatedDataGridCellsPresenter Name="PART_CellsPresenter"
                                              Grid.Column="1"
                                              DataGridFrozenGrid.IsFrozen="True" />
-            <!--<DataGridDetailsPresenter Name="PART_DetailsPresenter"
+            <TemplatedDataGridDetailsPresenter Name="PART_DetailsPresenter"
                                       Grid.Row="1"
                                       Grid.Column="1"
-                                      Background="{DynamicResource DataGridDetailsPresenterBackgroundBrush}" />-->
+                                      Background="{DynamicResource DataGridDetailsPresenterBackgroundBrush}" />
             <Rectangle Name="PART_BottomGridLine"
                        Grid.Row="2"
                        Grid.Column="1"
