--- a/WalletWasabi.Fluent/Styles/TemplatedDataGrid.axaml
+++ b/WalletWasabi.Fluent/Styles/TemplatedDataGrid.axaml
@@ -23,9 +23,9 @@
             <Rectangle Name="BackgroundRectangle"
                        Grid.RowSpan="2"
                        Grid.ColumnSpan="2" />
-            <Rectangle x:Name="InvalidVisualElement"
+            <!--<Rectangle x:Name="InvalidVisualElement"
                        Grid.ColumnSpan="2"
-                       Fill="{DynamicResource DataGridRowInvalidBrush}" />
+                       Fill="{DynamicResource DataGridRowInvalidBrush}" />-->
 
             <TemplatedDataGridRowHeader Name="PART_RowHeader"
                                Grid.RowSpan="3"
