--- a/WalletWasabi.Fluent/Views/Wallets/Home/History/HistoryTable.axaml
+++ b/WalletWasabi.Fluent/Views/Wallets/Home/History/HistoryTable.axaml
@@ -46,9 +46,9 @@
                 <Rectangle Name="BackgroundRectangle"
                            Grid.RowSpan="2"
                            Grid.ColumnSpan="2" x:CompileBindings="False" Classes.selectAnimation="{Binding IsFlashing}" />
-                <Rectangle x:Name="InvalidVisualElement"
+                <!--<Rectangle x:Name="InvalidVisualElement"
                            Grid.ColumnSpan="2"
-                           Fill="{DynamicResource DataGridRowInvalidBrush}" />
+                           Fill="{DynamicResource DataGridRowInvalidBrush}" />-->
 
                 <TemplatedDataGridRowHeader Name="PART_RowHeader"
                                    Grid.RowSpan="3"
