Add sats/vbyte to send fee the y-axis

--- a/WalletWasabi.Fluent/Views/Wallets/Send/SendFeeView.axaml
+++ b/WalletWasabi.Fluent/Views/Wallets/Send/SendFeeView.axaml
@@ -50,6 +50,15 @@
       <Setter Property="XAxisLabelFontWeight" Value="Normal" />
       <Setter Property="XAxisLabelFontSize" Value="12" />
     </Style>
+    <!-- LineChart YAxis Labels -->
+    <Style Selector="c|LineChart.yAxisLabels">
+      <Setter Property="YAxisLabelForeground" Value="{DynamicResource TextForegroundColor}" />
+      <Setter Property="YAxisLabelAngle" Value="0" />
+      <Setter Property="YAxisLabelOffset" Value="-25,0" />
+      <Setter Property="YAxisLabelAlignment" Value="Auto" />
+      <Setter Property="YAxisLabelFontSize" Value="12" />
+      <Setter Property="YAxisLabelOpacity" Value="0.8" />
+    </Style>
     <!-- LineChart Cursor -->
     <Style Selector="c|LineChart.cursor">
       <Setter Property="CursorStroke" Value="{DynamicResource SliderThumbBackground}" />
@@ -127,7 +136,7 @@
         <GridLength x:Key="SliderPostContentMargin">0</GridLength>
       </DockPanel.Resources>
       <Slider x:Name="CursorValue2"
-              Margin="18,0,18,0"
+              Margin="38,0,18,0"
               KeyboardNavigation.IsTabStop="False"
               DockPanel.Dock="Bottom"
               Classes="cursor"
@@ -137,10 +146,11 @@
               Minimum="{Binding SliderMinimum}"
               Maximum="{Binding SliderMaximum}"
               Value="{Binding SliderValue}" />
-      <c:LineChart Classes="cursor border xAxisLabels yAxis yAxisTitle area"
+      <c:LineChart Classes="cursor border xAxisLabels yAxis yAxisLabels yAxisTitle area"
                    XAxisLabels="{Binding ConfirmationTargetLabels}"
                    XAxisValues="{Binding ConfirmationTargetValues}"
                    XAxisCurrentValue="{Binding CurrentConfirmationTarget, Mode=TwoWay}"
+                   YAxisLabels="{Binding SatoshiPerByteLabels}"
                    YAxisValues="{Binding SatoshiPerByteValues}">
         <c:LineChart.Styles>
           <Style Selector="c|LineChart">
@@ -148,7 +158,7 @@
             <Setter Property="Margin" Value="18,10,18,0"/>
             <Setter Property="MinHeight" Value="150"/>
             <Setter Property="YAxisLogarithmicScale" Value="False"/>
-            <Setter Property="AreaMargin" Value="10,0,10,30"/>
+            <Setter Property="AreaMargin" Value="30,0,10,30"/>
             <Setter Property="AreaStrokeThickness" Value="2"/>
             <Setter Property="AreaStrokeLineCap" Value="Round"/>
             <Setter Property="AreaMinViableWidth" Value="40"/>
